--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,26 @@
+.navbar-black {
+  background-color: #333;
+}
 
+.bg-black {
+  background-color: #333;
+}
+
+.card-shadow {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-sizing: border-box;
+  box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  margin-bottom: 5rem;
+  transition: all 0.3s ease;
+}
+
+.card-shadow:hover {
+  transform: scale(1.01) translateY(-5px);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.card-image {
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
